// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals ChartHeader Component renders correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
    style={
      Object {
        "padding": "",
      }
    }
  >
    <h6
      className="Title"
    >
      Foo
       – Feb 15 2018
    </h6>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders padding correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
    style={
      Object {
        "padding": "0 0 1rem 0",
      }
    }
  >
    <h6
      className="Title"
    >
      Foo
       – Feb 15 2018
    </h6>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders primaryArea correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
    style={
      Object {
        "padding": "",
      }
    }
  >
    <h6
      className="Title"
    >
      Foo
       – Feb 15 2018
    </h6>
    <div
      className="PrimaryArea"
    >
      <div>
        react
      </div>
    </div>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders tooltip content correctly 1`] = `
<Fragment>
  <div
    className="ChartHeader"
    style={
      Object {
        "padding": "",
      }
    }
  >
    <h6
      className="Title"
    >
      Foo
       – Feb 15 2018
    </h6>
    <InfoTooltip
      content="tooltip content"
      size={17}
    />
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;

exports[`Signals ChartHeader Component renders without date 1`] = `
<Fragment>
  <div
    className="ChartHeader"
    style={
      Object {
        "padding": "",
      }
    }
  >
    <h6
      className="Title"
    >
      Foo
    </h6>
  </div>
  <hr
    className="Line"
  />
</Fragment>
`;
